public/css/app.css
/* ... */
@media (min-width: 1024px) {

  .lg\:top-40 {
    top: 10rem;
  }

  .lg\:col-span-2 {
    grid-column: span 2 / span 2;
  }

  .lg\:mx-0 {
    margin-left: 0px;
    margin-right: 0px;
  }

  .lg\:mx-24 {
    margin-left: 6rem;
    margin-right: 6rem;
  }

  .lg\:mt-16 {
    margin-top: 4rem;
  }

  .lg\:mb-24 {
    margin-bottom: 6rem;
  }

  .lg\:mt-0 {
    margin-top: 0px;
  }

  .lg\:ml-20 {
    margin-left: 5rem;
  }

  .lg\:mb-0 {
    margin-bottom: 0px;
  }

  .lg\:mb-3 {
    margin-bottom: 0.75rem;
  }

  .lg\:mt-8 {
    margin-top: 2rem;
  }

  .lg\:mr-auto {
    margin-right: auto;
  }

  .lg\:mb-6 {
    margin-bottom: 1.5rem;
  }

  .lg\:mt-28 {
    margin-top: 7rem;
  }

  .lg\:block {
    display: block;
  }

  .lg\:flex {
    display: flex;
  }

  .lg\:h-96 {
    height: 24rem;
  }

  .lg\:h-20 {
    height: 5rem;
  }

  .lg\:h-12 {
    height: 3rem;
  }

  .lg\:w-1\/2 {
    width: 50%;
  }

  .lg\:w-\[50\%\] {
    width: 50%;
  }

  .lg\:w-28 {
    width: 7rem;
  }

  .lg\:w-2\/5 {
    width: 40%;
  }

  .lg\:w-1\/6 {
    width: 16.666667%;
  }

  .lg\:w-\[65\%\] {
    width: 65%;
  }

  .lg\:max-w-lg {
    max-width: 32rem;
  }

  .lg\:max-w-full {
    max-width: 100%;
  }

  .lg\:max-w-7xl {
    max-width: 80rem;
  }

  .lg\:grid-cols-4 {
    grid-template-columns: repeat(4, minmax(0, 1fr));
  }

  .lg\:grid-cols-3 {
    grid-template-columns: repeat(3, minmax(0, 1fr));
  }

  .lg\:flex-row {
    flex-direction: row;
  }

  .lg\:flex-row-reverse {
    flex-direction: row-reverse;
  }

  .lg\:divide-x-2 > :not([hidden]) ~ :not([hidden]) {
    --tw-divide-x-reverse: 0;
    border-right-width: calc(2px * var(--tw-divide-x-reverse));
    border-left-width: calc(2px * calc(1 - var(--tw-divide-x-reverse)));
  }

  .lg\:divide-solid > :not([hidden]) ~ :not([hidden]) {
    border-style: solid;
  }

  .lg\:divide-gray-200 > :not([hidden]) ~ :not([hidden]) {
    --tw-divide-opacity: 1;
    border-color: rgb(229 231 235 / var(--tw-divide-opacity));
  }

  .lg\:px-8 {
    padding-left: 2rem;
    padding-right: 2rem;
  }

  .lg\:pt-16 {
    padding-top: 4rem;
  }

  .lg\:pb-4 {
    padding-bottom: 1rem;
  }

  .lg\:text-left {
    text-align: left;
  }

  .lg\:text-8xl {
    font-size: 6rem;
    line-height: 1;
  }

  .lg\:text-base {
    font-size: 1rem;
    line-height: 1.5rem;
  }

  .lg\:text-5xl {
    font-size: 3rem;
    line-height: 1;
  }

  .lg\:text-9xl {
    font-size: 8rem;
    line-height: 1;
  }

  .lg\:text-6xl {
    font-size: 3.75rem;
    line-height: 1;
  }

  .lg\:font-semibold {
    font-weight: 600;
  }
}

